--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "update": "node ./buildDNSBlocklist.mjs && node ./buildIpBlocklist.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "update": "node ./buildDNSBlocklist.mjs && node ./buildIpv4Blocklist.mjs && node ./buildIpv6Blocklist.mjs",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "standard .",
+    "lint:fix": "standard . --fix"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "ip-address": "^9.0.5",
+    "ip-cidr": "^4.0.0",
+    "ipaddr.js": "^2.2.0"
+  },
+  "devDependencies": {
+    "standard": "^17.1.0"
   }
 }
