--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
+    "gunzip-maybe": "^1.4.2",
     "ip-address": "^9.0.5",
     "ip-cidr": "^4.0.0",
-    "ipaddr.js": "^2.2.0"
+    "ipaddr.js": "^2.2.0",
+    "tar-stream": "^3.1.7"
   },
   "devDependencies": {
     "standard": "^17.1.0"
