--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "update": "node ./buildDNSBlocklist.mjs && node ./buildIpv4Blocklist.mjs && node ./buildIpv6Blocklist.mjs",
+    "update": "node --max-old-space-size=4096 ./buildDNSBlocklist.mjs && node ./buildIpv4Blocklist.mjs && node ./buildIpv6Blocklist.mjs",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "standard .",
     "lint:fix": "standard . --fix"
